[gd_scene load_steps=27 format=3 uid="uid://v5mxs27akhn4"]

[ext_resource type="FontFile" uid="uid://puun12xix6xd" path="res://Ui/Styling/Quicksand-SemiBold.ttf" id="1_fifht"]
[ext_resource type="Script" uid="uid://dqiijtjcr1b4h" path="res://Ui/Setings/setings.gd" id="1_q0don"]
[ext_resource type="Theme" uid="uid://bl7f7ipg81bfs" path="res://Ui/Styling/Theam.tres" id="4_rg2i1"]
[ext_resource type="Script" uid="uid://c250gr3c0s2jx" path="res://Ui/Setings/forward_button.gd" id="4_y0ntw"]
[ext_resource type="PackedScene" uid="uid://bv5sjkyn30e3u" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/wall_cracked.gltf" id="5_3b62w"]
[ext_resource type="Script" uid="uid://b50jy3easr7xr" path="res://Ui/Setings/camera_3d.gd" id="5_skbde"]
[ext_resource type="PackedScene" uid="uid://dp4hphl5ngddy" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/stairs_long.gltf" id="6_skbde"]
[ext_resource type="PackedScene" uid="uid://wjicqpp7jqh2" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/barrel_large_decorated.gltf" id="7_ajtpu"]
[ext_resource type="PackedScene" uid="uid://cdyx4svuv1x2m" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/chest_gold.gltf" id="8_rydfs"]
[ext_resource type="PackedScene" uid="uid://r25ctj0lbed5" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/floor_tile_small_weeds_B.gltf" id="9_km1am"]
[ext_resource type="PackedScene" uid="uid://o6stxy7sjkg6" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/floor_tile_small_weeds_A.gltf" id="10_ounr8"]
[ext_resource type="PackedScene" uid="uid://gm7b7qwlneaj" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/floor_tile_large.gltf" id="11_a2ur3"]
[ext_resource type="PackedScene" uid="uid://c44mxxdsrynre" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/wall_broken.gltf" id="13_rydfs"]
[ext_resource type="PackedScene" uid="uid://c0wi70nu65e0i" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/floor_dirt_large.gltf" id="14_km1am"]
[ext_resource type="PackedScene" uid="uid://gvi4b7tn2xw5" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/coin_stack_small.gltf" id="15_km1am"]
[ext_resource type="PackedScene" uid="uid://cyu71duqqolw0" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/wall_shelves.gltf" id="16_cfu3l"]
[ext_resource type="PackedScene" uid="uid://cw1e4vb2co6co" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/wall.gltf" id="17_puwwd"]
[ext_resource type="PackedScene" uid="uid://bxtw3ypk7s35v" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/trunk_large_A.gltf" id="18_lss58"]
[ext_resource type="PackedScene" uid="uid://xtqq7coagxjc" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/table_long_decorated_C.gltf" id="19_j62b6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3b62w"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_skbde"]
sky_material = SubResource("ProceduralSkyMaterial_3b62w")

[sub_resource type="Environment" id="Environment_ajtpu"]
background_mode = 2
sky = SubResource("Sky_skbde")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Theme" id="Theme_q0don"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_q0don"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wi3jf"]
color = Color(0.369745, 0.563838, 0.99346, 1)
thickness = 9

[sub_resource type="StyleBoxLine" id="StyleBoxLine_y0ntw"]
color = Color(0.368627, 0.564706, 0.992157, 1)
thickness = 9

[node name="Setings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0don")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ajtpu")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_top = 47.0
offset_right = 96.5
offset_bottom = 116.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_fifht")
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -41.5
offset_right = 123.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="fullscreen_button" type="CheckButton" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_q0don")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Fullscreen"

[node name="Master Volume" type="Label" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master Volume"
horizontal_alignment = 1

[node name="master_volume_slider" type="HSlider" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_q0don")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wi3jf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_y0ntw")
max_value = 1.0
step = 0.005
value = 1.0

[node name="Sound Effect Volume" type="Label" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Sound Effects"
horizontal_alignment = 1

[node name="sound_effect_volume_slider" type="HSlider" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_q0don")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wi3jf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_y0ntw")
max_value = 1.0
step = 0.005
value = 1.0

[node name="Go to Control setings" type="Button" parent="Main"]
layout_mode = 2
offset_left = -103.5
offset_top = 311.0
offset_right = 143.5
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="Controls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -131.5
offset_right = 258.0
offset_bottom = 131.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Left" type="VBoxContainer" parent="Controls/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Forward" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Left/Forward"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Left/Forward/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Forward:      "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Left/Forward/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "W"
script = ExtResource("4_y0ntw")
action_name = "forward"

[node name="Back" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Left/Back"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Left/Back/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Backwords:  "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Left/Back/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "S"
script = ExtResource("4_y0ntw")
action_name = "back"

[node name="Left" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Left/Left"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Left/Left/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Left:              "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Left/Left/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "A"
script = ExtResource("4_y0ntw")
action_name = "left"

[node name="Right" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Left/Right"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Left/Right/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Right:            "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Left/Right/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "D"
script = ExtResource("4_y0ntw")
action_name = "right"

[node name="Junp" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Left/Junp"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Left/Junp/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Jump:           "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Left/Junp/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Space"
script = ExtResource("4_y0ntw")
action_name = "jump"

[node name="Right" type="VBoxContainer" parent="Controls/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprint" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Right"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Right/Sprint"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Right/Sprint/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Sprint:    "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Right/Sprint/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Ctrl"
script = ExtResource("4_y0ntw")
action_name = "sprint"

[node name="abilty 1" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Right"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 1"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Abilty 1:  "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "1"
script = ExtResource("4_y0ntw")
action_name = "abilty 1"

[node name="abilty 2" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Right"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 2"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Abilty 2: "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "2"
script = ExtResource("4_y0ntw")
action_name = "abilty 2"

[node name="abilty 3" type="PanelContainer" parent="Controls/PanelContainer/HBoxContainer/Right"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 3"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 30
text = "Abilty 3: "

[node name="Button" type="Button" parent="Controls/PanelContainer/HBoxContainer/Right/abilty 3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "3"
script = ExtResource("4_y0ntw")
action_name = "abilty 3"

[node name="Go to main setings" type="Button" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = 177.5
offset_right = 61.5
offset_bottom = 254.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_rg2i1")
theme_override_font_sizes/font_size = 60
text = "Back"

[node name="BG" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="BG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.06206, 2.56525)
light_color = Color(0.990403, 0.730322, 0.55202, 1)
light_energy = 6.01
omni_range = 33.3

[node name="Camera3D" type="Camera3D" parent="BG"]
transform = Transform3D(1, 0, 0, 0, 0.879582, 0.475747, 0, -0.475747, 0.879582, -2.25482, 1.75368, 1.70055)
fov = 75.6059
script = ExtResource("5_skbde")

[node name="wall_cracked2" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -6)

[node name="wall_cracked5" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -6)

[node name="wall_cracked6" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -6)

[node name="wall_cracked7" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 0, -4)

[node name="wall_cracked8" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -14, 0, 0)

[node name="wall_cracked9" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -14, 0, 8)

[node name="wall_cracked16" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -14, 4, 8)

[node name="wall_cracked3" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="wall_cracked4" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 4, 0, -6)

[node name="wall_cracked10" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 10)

[node name="wall_cracked11" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 10)

[node name="wall_cracked12" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 10)

[node name="wall_cracked17" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 4, 10)

[node name="wall_cracked13" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="wall_cracked14" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 4, 0, 10)

[node name="wall_cracked15" parent="BG" instance=ExtResource("5_3b62w")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, 0)

[node name="stairs_long2" parent="BG" instance=ExtResource("6_skbde")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, -3.50092)

[node name="barrel_large_decorated2" parent="BG" instance=ExtResource("7_ajtpu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -5)

[node name="chest_gold2" parent="BG" instance=ExtResource("8_rydfs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)

[node name="floor_tile_small_weeds_B2" parent="BG" instance=ExtResource("9_km1am")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -3)

[node name="floor_tile_small_weeds_A2" parent="BG" instance=ExtResource("10_ounr8")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9, 0, -3)

[node name="floor_tile_large2" parent="." instance=ExtResource("11_a2ur3")]

[node name="floor_tile_large3" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="floor_tile_large15" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="floor_tile_large4" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="floor_tile_large5" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="floor_tile_large11" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -4)

[node name="floor_tile_large12" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -4)

[node name="floor_tile_large13" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="floor_tile_large14" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9838, 0, 4)

[node name="floor_tile_large6" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="floor_tile_large16" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 4)

[node name="floor_tile_large7" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="floor_tile_large8" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="floor_tile_large9" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="floor_tile_large10" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="floor_tile_large17" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9838, 0, 8)

[node name="floor_tile_large18" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 8)

[node name="floor_tile_large19" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 8)

[node name="floor_tile_large20" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="floor_tile_large21" parent="." instance=ExtResource("11_a2ur3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 8)

[node name="wall_broken2" parent="." instance=ExtResource("13_rydfs")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 0, 4)

[node name="floor_dirt_large2" parent="." instance=ExtResource("14_km1am")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -16, 1, 4)

[node name="floor_dirt_large3" parent="." instance=ExtResource("14_km1am")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -16, 5, 4)

[node name="chest_gold2" parent="." instance=ExtResource("8_rydfs")]
transform = Transform3D(0.0350216, 0, 0.999387, 0, 1, 0, -0.999387, 0, 0.0350216, -14.7164, 1.11389, 3.94986)

[node name="coin_stack_small2" parent="." instance=ExtResource("15_km1am")]
transform = Transform3D(0.524566, 0, -0.85137, 0, 1, 0, 0.85137, 0, 0.524566, -14.0476, 1.04113, 3.38158)

<<<<<<< Updated upstream
<<<<<<< Updated upstream
<<<<<<< Updated upstream
<<<<<<< Updated upstream
[connection signal="toggled" from="Main/PanelContainer/VBoxContainer/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="value_changed" from="Main/PanelContainer/VBoxContainer/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Main/PanelContainer/VBoxContainer/sound_effect_volume_slider" to="." method="_on_sound_effect_volume_slider_value_changed"]
=======
=======
>>>>>>> Stashed changes
=======
>>>>>>> Stashed changes
=======
>>>>>>> Stashed changes
[node name="wall_shelves2" parent="." instance=ExtResource("16_cfu3l")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, 4)

[node name="wall2" parent="." instance=ExtResource("17_puwwd")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, 8)

[node name="trunk_large_A2" parent="." instance=ExtResource("18_lss58")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 9)

[node name="table_long_decorated_C2" parent="." instance=ExtResource("19_j62b6")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, 8.5604)

[connection signal="value_changed" from="Main/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="toggled" from="Main/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
>>>>>>> Stashed changes
[connection signal="pressed" from="Main/Go to Control setings" to="." method="_on_go_to_control_setings_pressed"]
[connection signal="pressed" from="Controls/Go to main setings" to="." method="_on_go_to_main_setings_pressed"]
